# dev-env

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  apply.sh  bootstrap.sh  commands.sh  pyproject.toml  run.py  setup_sudoers.sh  todo.md
.github/workflows/: main.yml  release.yml
archive/.github/workflows/: main.yml
dev/: overview.md  roadmap.md  roadmap_2.md  roadmap_3.md  roadmap_4.md  todo.md  todo_05_Dec.md  todo_07_Jan.md  todo_09_Dec.md  todo_11_Dec.md  todo_27_Nov.md  todo_28_Dec.md
dev/draft/14_oct/: new_readme.md
dev/draft/ask_and_generate_name/: dev.ipynb
dev/draft/central_daily_job/: central_daily_job.py
dev/draft/clone_all_projects/: clone_all_projects.py  fix_script.py  test_clone_projects.py
dev/draft/dev_env_rework/: dev.ipynb  dummy.sh  notes.md
dev/draft/export-telegram-data/: dev.ipynb  dev.py
dev/draft/mvp/: setup_script.py  todo.md
dev/draft/pm_v2/: todo.md
dev/draft/pm_v2/misc/: repo_stats.py
dev/draft/pm_v2/old/: clone_all_projects.py  ffs.py  old_project_manager.py  project_manager.py  repo_discovery.py
dev/draft/project_management_v2/: todo.md  workalong.md
dev/draft/project_management_v2/misc/: repo_stats.py
dev/draft/project_management_v2/old/: clone_all_projects.py  dev_env.py  ffs.py  old_project_manager.py  project_manager.py  repo_discovery.py  repo_stats.py
dev/draft/project_management_v2/project_management/: readme.md
dev/draft/project_management_v2/project_organization/: cli.py  config.yaml  readme.md  run.py  run.sh
dev/draft/project_management_v2/ref/: scratch.md
dev/draft/project_management_v2/shared/: repo_discovery.py
dev/draft/setup_python_environments/: setup_poetry.sh
dev/examples/clone_all_projects/: clone_all_projects.py
dev/features/: feature_1.md
dev/learning_tools/: popular_commands.txt  todo.md
dev/migration/dev_env/: README.md  dev_env.py  main.py  presets.py
dev/migration/dev_env/tests/: test_daily_job.py  test_monthly_job.py  test_new_github_project.py  test_setup_monthly_projects_dir.py  test_setup_new_project_dir.py  test_setup_root_dir.py  test_start_new_project.py
dev/migration/dev_env/tools/: daily_job.py  monthly_job.py  project_manager.py
dev/mini-notes/: 1.md  2.md
dev/temp/: setup_gh.sh  setup_ssh.sh
dev_env/: __init__.py  codecov_dummy.py  dev_env.py  presets.py
dev_env/core/: dev_env.py  ffs.py  git_utils.py  settings.py
dev_env/core/pm_utils/: destinations.py  name_generator.py  project_utils.py
dev_env/core/pm_utils/config/: destinations.yaml
dev_env/setup/: settings.py  setup_shell_profiles_and_env.py
dev_env/tests/: test_ffs.py  test_new_github_project.py
dev_env/tools/: lnsafe.py
dev_env/tools/project_arranger/: cli.py  pa_config.yaml.example  readme.md  run.py  workalong.md
dev_env/tools/project_arranger/dev/: dev.ipynb  lib.py  projects_list.json  sort_projets.ipynb
dev_env/tools/project_discoverer/: pd_cli.py  pd_config.py  pd_config.yaml  project_discoverer.py
dev_env/tools/project_inspector/: readme.md
dev_env/tools/project_manager/: cli.py  config.yaml  pm_cli.py  pm_config.py  pm_config.yaml  project_manager.py  todo.md  todo_29_Nov.md  workalong.md
dev_env/tools/repo_fixer/: repo_fixer.py
docs/: improvement-suggestions.md  nix-structure.md  todo.md
docs/solutions/: help.md  pkill.md  readme.md
new-nix/: README.md  flake.nix  result  todo.md
new-nix/config/: petr-personal.nix  petr-work.nix  sample.local.nix
new-nix/hosts/darwin/: default.nix
new-nix/modules/darwin/: README.md  casks.nix  default.nix  home-manager-common.nix  home-manager.nix  packages.nix  secrets.nix
new-nix/modules/shared/: home-manager.nix
nix/: README.md  build-nix.sh  configuration.nix  flake.nix  todo.md
nix/config/: default.nix  petr-personal.nix  petr-personal.yaml  petr-work.nix  shared.nix  user.nix  user.yaml
nix/config/backup/: default-user.nix  default.nix  petr-personal.nix  petr-work.nix
nix/hosts/darwin/: default.nix
nix/modules/darwin/: casks.nix  default.nix  files.nix  home-manager-common.nix  home-manager.nix  packages.nix  programs.nix  secrets.nix
nix/modules/home-manager/: default.nix
nix/modules/shell/: README.md  default.nix
nix/tools/: configure.py
old_dev_env/tools/: lnsafe.py
resources/shell_profiles/: .alias  .zshrc
tests/: test_codecov_dummy.py  test_imports.py  test_monthly_job.py  test_setup_root_dir.py
tests/test_project_manager/: conftest.py  test_todo_rollup.py
tools/: dev_env_updater.py
tools/github_secrets_manager/: manage_secrets.py
tools/mac_settings/: tool.py
tools/mac_settings/src/: categorize_changes.py  clean_diff.py  diff_settings.py
tools/project_arrangement/: config.py  config.yaml  main.py  run.py
tools/project_arrangement/dev/: build_projects_list.py  dev.ipynb  lib.py  todo.md
tools/repo_fixer/: config.yaml  poetry_template.txt  repo_fixer.py  tests_workflow_template.txt  todo.md
tools/repo_fixer/dev/: todo_27_nov.md
tools/repo_fixer/tests/: conftest.py  test_precommit.py  test_project_name.py
(+66 files in other folders)
